objects/Salesaid_Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Salesaid Action Plans</relationshipLabel>
        <relationshipName>Salesaid_Action_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Activity__c</fullName>
        <label>Proposed Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rownumber__c</fullName>
        <label>#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sales_aid__c</fullName>
        <label>Sales Aid</label>
        <referenceTo>Sales_Aid__c</referenceTo>
        <relationshipLabel>Salesaid Action Plans</relationshipLabel>
        <relationshipName>Salesaid_Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Salesaid Action Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Salesaid Action Plan  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesaid Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>